added work and contact section

--- a/index.html
+++ b/index.html
@@ -1,17 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
  <head>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta charset="UTF-8">
     <title>Olivia Schif Developer Portfolio</title>
     <link rel="stylesheet" href="./assets/style.css">
  </head>
  <body>
 
-    
+ <nav class="navbar"> 
  <div class="header">
     <h1>Olivia Schif</h1>
     <h2>Responsive Design, HTML, CSS</h2>
+    </div>
     <div class="links">
         <ul>
             <li><a class="info-bar" href="#about-me">About Me</a></li>
@@ -19,7 +20,7 @@
             <li><a class="info-bar" href="#contact-me">Contact Me</a></li>
         </ul>
     </div>
- </div>
+  </nav>  
 
 <main>
 
