--- a/index.html
+++ b/index.html
@@ -31,8 +31,9 @@
     </div>
     <div class="ab-text">
       <h3>About Me</h3>
-      <p>Hi, my name is Olivia Schif! I live in Kansas City and I am a Web Developer. In January of 2023 I earned my certifaction in HTML and CSS and I am currently a student at KU in the coding bootcamp.
-      </p>
+    <div class="p">  
+      Hi, my name is Olivia Schif! I live in Kansas City and I am a Web Developer. In January of 2023 I earned my certifaction in HTML and CSS and I am currently a student at KU in the coding bootcamp.
+      </div>
     </div>
 </div> 
 
