--- a/index.html
+++ b/index.html
@@ -1,18 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
- <head>
+<head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta charset="UTF-8">
     <title>Olivia Schif Developer Portfolio</title>
     <link rel="stylesheet" href="./assets/style.css">
- </head>
- <body>
+</head>
+<body>
 
- <nav class="navbar"> 
- <div class="header">
+<nav class="navbar"> 
+<div class="header">
     <h1>Olivia Schif</h1>
     <h2>Responsive Design, HTML, CSS</h2>
-    </div>
+</div>
     <div class="links">
         <ul>
             <li><a class="info-bar" href="#about-me">About Me</a></li>
@@ -25,16 +25,15 @@
 <main>
 
 <!--add image of self-->
-<div id="about-me" class="about-me">
-    <div>
-        <img class="port-img" src="./assets/images/Portfolio-photo.jpg" alt="olivia with beach in background">
-    </div>
-    <div class="ab-text">
-      <h3>About Me</h3>
-    <div class="p">  
-      Hi, my name is Olivia Schif! I live in Kansas City and I am a Web Developer. In January of 2023 I earned my certifaction in HTML and CSS and I am currently a student at KU in the coding bootcamp.
-      </div>
-    </div>
+<div id="about-me" class="about">
+   <!-- <div class="img"> -->
+    <img class="about __img" src="./assets/images/Portfolio-photo.jpg" alt="olivia with beach in background">
+<div class="about__text">
+    <h3>About Me</h3>
+<p>  
+    Hi, my name is Olivia Schif! I live in Kansas City and I am a Web Developer. In January of 2023 I earned my certifaction in HTML and CSS and I am currently a student at KU in the coding bootcamp.
+</p>
+</div>
 </div> 
 
 
@@ -89,7 +88,7 @@
 <footer id="contact-me" class="contact-me">
     <h3 class="contact-me">Contact</h3>
    <div class="contacts">
-    <a target="_blank" class="btn-contact" href="https://open.spotify.com/user/livschif">
+    <a class="btn-contact" href="https://open.spotify.com/user/livschif">
       <i class="fab fa-facebook-square">
       </i>Spotify
     </a>
