added a README file to the project

--- a/index.html
+++ b/index.html
@@ -21,24 +21,17 @@
         </ul>
     </div>
   </nav>  
-
 <main>
-
 <!--add image of self-->
 <div id="about-me" class="about">
-   <!-- <div class="img"> -->
     <img class="about __img" src="./assets/images/Portfolio-photo.jpg" alt="olivia with beach in background">
 <div class="about__text">
-    <h3>About Me</h3>
-<p>  
+  <h3>About Me</h3>
+  <p>  
     Hi, my name is Olivia Schif! I live in Kansas City and I am a Web Developer. In January of 2023 I earned my certifaction in HTML and CSS and I am currently a student at KU in the coding bootcamp.
-</p>
+  </p>
 </div>
 </div> 
-
-
-
-
 <!--link project webpages here-->   
 <div id="work" class="work">
         <h3 class="work-text">Work</h3>
@@ -80,17 +73,12 @@
         </a>
     </div>
 </div> 
-
 </main>
-
-
-<!--add icon to all the links-->
+<!--footer section-->
 <footer id="contact-me" class="contact-me">
     <h3 class="contact-me">Contact</h3>
    <div class="contacts">
-    <a class="btn-contact" href="https://open.spotify.com/user/livschif">
-      <i class="fab fa-facebook-square">
-      </i>Spotify
+    <a class="btn-contact" href="https://open.spotify.com/user/livschif">Spotify
     </a>
     <a class="btn-contact" href="https://github.com/livschif">Github
     </a>
