adding food-ease project

--- a/index.html
+++ b/index.html
@@ -51,9 +51,9 @@
             </h4>
         </a>
         <a href="" class="work-tile">
-            <img class="img-tile placeholder" src="./assets/images/placeholder.png" alt="placeholder image">
+            <img class="img-tile food-ease" src="./assets/images/food-ease.png" alt="placeholder image">
             <h4 class="work-title">
-            <span>In the Making
+            <span>Food-ease
             </span>
             </h4>
         </a>
